--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator</title>
-    <base href="/KUSS_Calculator/" />
+    <base href="/KUSB_Calculator/" />
     <link href="_framework/dotnet.sok17iv2fc.js" rel="preload" as="script" fetchpriority="high" crossorigin="anonymous" integrity="sha256-/H3yt3y/0LJ5xerKyjz9IIZWlXNilqvu+tMmrHHrDNY=" />
     <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/app.css" />
@@ -51,3 +51,4 @@
 </body>
 
 </html>
+
